# EpidemicSim

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  test_input.xml  test_input_small.xml
apps/: CMakeLists.txt  EpidemicSim.cpp
inputs/: baseline.xml  baseline_medium.xml  baseline_small.xml  early_testing_1.xml  early_testing_1_medium.xml  early_testing_1_small.xml  early_testing_2.xml  early_testing_2_medium.xml  early_testing_2_small.xml  no_non_essential.xml  no_non_essential_medium.xml  no_non_essential_small.xml  test_input.xml  test_input_small.xml
modules/: CMakeLists.txt
modules/Epidemic/: CMakeLists.txt
modules/Epidemic/include/Epidemic/: Agent.h  Building.h  CommonConfiguration.h  Community.h  CommunityConfiguration.h  Distributions.h  SIRDStates.h  Types.h  World.h  WorldBuilder.h  WorldConfiguration.h  XmlReader.h
modules/Epidemic/src/: Agent.cpp  Building.cpp  CommonConfiguration.cpp  Community.cpp  CommunityConfiguration.cpp  Distributions.cpp  SIRDStates.cpp  Types.cpp  World.cpp  WorldBuilder.cpp  WorldConfiguration.cpp  XmlReader.cpp
